--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -11,8 +11,8 @@
 	</div>
 	<div>
 		结果:
-        <span th:if="${result} eq false">删除失败</span>
-        <span th:if="${result} eq true">删除成功</span>
+        <span th:if="${result} eq true">删除失败</span>
+        <span th:if="${result} eq false">删除成功</span>
 	</div>
 </body>
 </html>
