--- a/src/main/resources/templates/insert.html
+++ b/src/main/resources/templates/insert.html
@@ -11,14 +11,14 @@
 	</div>
 	<div>
 		结果:
-        <span th:if="${result} eq 0">新增失败</span>
-        <span th:if="${result} eq 1">新增成功</span>
+        <span th:if="${result} eq false">新增失败</span>
+        <span th:if="${result} eq true">新增成功</span>
 	</div>
     <div>
         <div>信息</div>
-        交易编号：<span th:text="${txnCtrlInfo.idtxn}"></span>
-        交易控制编号：<span th:text="${txnCtrlInfo.idtxnctrl}"></span>
-        商户号：<span th:text="${txnCtrlInfo.merchantid}"></span>
+        交易编号：<span th:text="${txnCtrlInfo.idTxn}"></span>
+        交易控制编号：<span th:text="${txnCtrlInfo.idTxnCtrl}"></span>
+        商户号：<span th:text="${txnCtrlInfo.merchantId}"></span>
         金额：<span th:text="${txnCtrlInfo.amt}"></span>
         备注：<span th:text="${txnCtrlInfo.remark}"></span>
     </div>
