--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -9,7 +9,7 @@
 	<div>
 		<label>交易信息</label>
 	</div>
-	<div th:each="txnCtrlInfo:${txnCtrlInfos}">
+	<!--<div th:each="txnCtrlInfo:${txnCtrlInfos}">-->
 		<div>
 			交易编号:<span th:text="*{txnCtrlInfo.idTxn}"></span>
 		</div>
