--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -11,9 +11,9 @@
 	</div>
     <div>
         <div>信息</div>
-        交易编号：<span th:text="${txnCtrlInfo.idtxn}"></span>
-        交易控制编号：<span th:text="${txnCtrlInfo.idtxnctrl}"></span>
-        商户号：<span th:text="${txnCtrlInfo.merchantid}"></span>
+        交易编号：<span th:text="${txnCtrlInfo.idTxn}"></span>
+        交易控制编号：<span th:text="${txnCtrlInfo.idTxnCtrl}"></span>
+        商户号：<span th:text="${txnCtrlInfo.merchantId}"></span>
         金额：<span th:text="${txnCtrlInfo.amt}"></span>
         备注：<span th:text="${txnCtrlInfo.remark}"></span>
     </div>
